# roman-technologies

./: ProjectHome.md  connect.sh
Arduino/HeadAndPing/: HeadAndPing.pde
Arduino/MobileBaseSensors/: MobileBaseSensors.pde
Report/: TODO.txt
Report/Paper/: .~lock.Interaction through Emotion.docx#  Makefile  abstract.tex  approach.bbl  approach.blg  approach.tex  concept.tex  conclusion.tex  findings.tex  frontpage.tex  preface.tex  project_eva.bbl  project_eva.bib  project_eva.blg  project_eva.run.xml  project_eva.tex  simulation.tex  test.tex
Report/Technical Documentation/: Makefile  abstract.tex  aesthetic_design.tex  arm.tex  electronics.tex  frontpage.tex  global_planner.tex  head.tex  object_avoidance.tex  preface.tex  software_architecture.tex  technical_document.tex
arm/: CMakeLists.txt  manifest.xml
arm/include/: ArmMotorHandler.h  AutonomeArmController.h  Motor.h
arm/launch/: arm.launch
arm/src/: ArmMotorHandler.cpp  AutonomeArmController.cpp  Kinematics.cpp  Motor.cpp
audio_processing/: .cproject  .project  .pydevproject  CMakeLists.txt  manifest.xml
audio_processing/launch/: speech.launch
audio_processing/msg/: speech.msg
audio_processing/src/: SoundPlayer.cpp  SpeechRecognition.cpp
branches/mobile_base/: CMakeLists.txt  Doxyfile
branches/tld/opentld/src/tld/: CMakeLists.txt  DetectorCascade.h  TemplateDetector.cpp
extra/: .bash_aliases  nero.rosinstall  readme.txt
extra/database/: db.backup  db_pgadmin3.backup
extra/network/: hostapd.conf  internet-connect.sh  pandanet.conf
extra/udevRules/: roman.rules
extra/upstart/: install.bash  nero-start  nero-stop  nero.conf  roscore-start
gripper/: CMakeLists.txt
gripper/include/: Controller.h  MotorHandler.h  TemperatureListener.h  UltrasoneController.h
gripper/launch/: gripper.launch  roman.launch
gripper/src/: Controller.cpp  MotorHandler.cpp  PS3Controller.cpp  UltrasoneController.cpp
head/: CMakeLists.txt  Makefile  manifest.xml
head/include/: AutonomeHeadController.h  Emotion.h
head/launch/: head.launch
head/msg/: Emotion.msg  eyebrows.msg
head/src/: AutonomeHeadController.cpp  Emotion.cpp  (+1 more)
image_processing/: CMakeLists.txt  manifest.xml
image_server/: CMakeLists.txt  manifest.xml
input/: CMakeLists.txt  diff.txt  manifest.xml
logical_unit/: CMakeLists.txt  Makefile  manifest.xml
mobile_base/: CMakeLists.txt  manifest.xml
motors/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
network/: accesspoint.sh  internet.sh
recast/: manifest.xml
trunk/: stack.xml
trunk/image_processing/: CMakeLists.txt  manifest.xml
trunk/image_processing/include/image_processing/: FocusFace.h  ObjectRecognition.h  PersonTracker.h  TabletopSegmentation.h  Util.h
trunk/image_processing/launch/: focus_face.launch  kinect.launch  object_recognition.launch  tabletop_complete.launch  tabletop_object_recognition.launch  tabletop_segmentation.launch
trunk/image_processing/src/: FocusFace.cpp  Kinect.cpp  KinectDisplay.cpp  KinectTools.cpp  ObjectRecognition.cpp  PersonTracker.cpp  TabletopSegmentation.cpp
trunk/image_processing/srv/: FindObject.srv  SetActive.srv
trunk/recast/: CMakeLists.txt
(+598 files in other folders)
